# PedDesign-Py

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  test.py  test.qmd
app/: PedDesignCT_macos.spec  PedDesignCT_win.spec  app.py  helper.py
app/test-app/: app-test-widget.py
dev/: child.qmd  design.qmd  dev-install.py  test-app.ipynb  test-pkg.ipynb  test.ipynb  test.py  test.qmd  test2.py
peddesign/: _child.py  main.py
src/peddesign/: __init__.py  ct.py
